2008-01-18  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/FilterEditor/_EditRule.py
    * src/FilterEditor/_ShowResults.py
    * src/plugins/ExtractCity.py
    * src/plugins/NarrativeWeb.py
    * src/plugins/ChangeNames.py
    * src/plugins/GraphViz.py
    * src/plugins/MediaManager.py
    * src/plugins/FamilyLines.py
    * src/Selectors/_BaseSelector.py
    * src/ObjectSelector/_ObjectSelectorWindow.py
    * src/ObjectSelector/_FamilyFilterFrame.py
    * src/ObjectSelector/_PersonFilterFrame.py
    * src/PageView.py
    * src/Filters/_FilterMenu.py
    * src/Filters/_SearchBar.py
    * src/Filters/_FilterComboBox.py
    * src/Filters/_FilterList.py
    * src/Filters/_FilterParser.py
    * src/Filters/_FilterStore.py
    * src/Filters/_GenericFilter.py
    * src/Filters/_ParamFilter.py
    pylint fixes + init gtk.ListStore() with gobject.TYPE_BOOLEAN types etc


2008-01-18  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/gen/db/dbdir.py
    * src/plugins/ChangeNames.py
    * src/DisplayModels/_NoteModel.py
    * src/GrampsDbUtils/_GrampsBSDDB.py
    * src/Filters/SideBar/_MediaSidebarFilter.py
    * src/Filters/SideBar/_SidebarFilter.py
    * src/Filters/SideBar/_SourceSidebarFilter.py
    * src/Filters/SideBar/_EventSidebarFilter.py
    * src/Filters/SideBar/_FamilySidebarFilter.py
    * src/Filters/SideBar/_PlaceSidebarFilter.py
    * src/Filters/SideBar/_NoteSidebarFilter.py
    * src/Filters/SideBar/_RepoSidebarFilter.py
    * src/Filters/SideBar/_PersonSidebarFilter.py
    * src/Filters/Rules/Family/_HasNoteRegexp.py
    * src/Filters/Rules/Event/_MatchesSourceFilter.py
    * src/Filters/Rules/Event/_HasNoteRegexp.py
    * src/Filters/Rules/Event/_MatchesPersonFilter.py
    * src/Filters/Rules/_HasTextMatchingRegexpOf.py
    * src/Filters/Rules/Place/_MatchesEventFilter.py
    * src/Filters/Rules/Person/_HasTextMatchingRegexpOf.py
    * src/Filters/Rules/Person/_MatchesEventFilter.py
    Pylint fixes.
